fixed collapsed menu transparent

--- a/components/navbar/default/style.sass
+++ b/components/navbar/default/style.sass
@@ -33,7 +33,7 @@
 @media only screen and (max-width: 766px) {
 
   .navbar .collapsing, .navbar .in {
-    background-color: $carmel-color-menu !important;
+    background-color: $carmel-color-background !important;
   }
 
   .navbar .collapsing ul li a, .navbar .in ul li a {
